Renamed test environment variables

--- a/.env.test
+++ b/.env.test
@@ -4,17 +4,17 @@ APP_SECRET='$ecretf0rt3st'
 SYMFONY_DEPRECATIONS_HELPER=999999
 PANTHER_APP_ENV=panther
 
-DATABASE_URL=${DATABASE_URL}
-MESSENGER_TRANSPORT_DSN=in-memory://
+SMC_DATABASE=${SMC_DATABASE}
+SMC_MESSENGER=in-memory://
+SMC_MAILER=smtp://null
+SMC_MAILER_TO=nomail@example.com
 
 ## Specific Stripe-Mirakl configuration
-STRIPE_CLIENT_ID=ca_key
-STRIPE_CLIENT_SECRET=sk_test_secret
-TECHNICAL_ALERT_EMAIL=nomail@example.com
-REDIRECT_ONBOARDING=https://stripe.com
-ENABLES_AUTOMATIC_TRANSFER_CREATION=true
-ENABLES_AUTOMATIC_REFUND_CREATION=true
+SMC_STRIPE_CLIENT_ID=ca_key
+SMC_STRIPE_API_KEY=sk_test_secret
+SMC_KYC_REDIRECT_URL=https://stripe.com
+SMC_ENABLE_TRANSFERS=true
+SMC_ENABLE_REFUNDS=true
 
-MAILER_DSN=smtp://null
-BASE_HOST=connector-example.com
-STRIPE_PREFILL_ONBOARDING=true
+SMC_URL=connector-example.com
+SMC_KYC_PREFILL_FORM=true
