--- a/examples/docker/app/config/supervisord.conf
+++ b/examples/docker/app/config/supervisord.conf
@@ -78,3 +78,12 @@ stderr_logfile_maxbytes=0
 autostart=true
 autorestart=true
 command=php /var/www/bin/console messenger:consume process_refunds --time-limit=3600 --env=prod --quiet
+
+[program:filebeat]
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/stderr
+stderr_logfile_maxbytes=0
+autostart=true
+autorestart=true
+command=/usr/share/filebeat/filebeat -c /usr/share/filebeat/filebeat.yml
