Format Symfony logs to json

--- a/config/packages/prod/monolog.yaml
+++ b/config/packages/prod/monolog.yaml
@@ -8,6 +8,7 @@ monolog:
         nested:
             type: stream
             path: "%kernel.logs_dir%/%kernel.environment%.log"
+            formatter: json_log_formatter
             level: info
         console:
             type: console
